# LumaFin

./: .env.example  .gitignore  COLAB_QUICK_START.md  DEPLOYMENT.md  DEV_GUIDE.md  HACKATHON_GUIDE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  PRE_DEMO_CHECKLIST.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  TRAINING_SUMMARY.md  Untitled-2025-11-22-1434.excalidraw  WORKFLOW_DIAGRAM.md  analyze_categories.py  architecture.txt  celerybeat-schedule  check_db.py  check_distribution.py  docker-compose.yml  evaluation_results.json  evaluation_results_csv_ce_trained.json  evaluation_results_csv_ce_trained_debug.json  evaluation_results_optuna_debug.json  evaluation_results_retrieval.json  evaluation_results_small.json  kaggle.json  pyproject.toml  requirements.txt  setup.sh  train_all_models.sh  train_complete_pipeline.sh
colab_notebooks/: 01_setup_and_data_preparation.ipynb  02_train_embeddings_lacft.ipynb  03_train_reranker_xgboost.ipynb  04_evaluate_complete_pipeline.ipynb  README.md
data/: dataset_report.json  global_examples.csv  merged_training.csv  rows_ce.jsonl  taxonomy.json
demo/: streamlit_app.py
k8s/: api-deployment.yaml  celery-deployment.yaml  configmap.yaml  postgres-deployment.yaml  redis-deployment.yaml  secret.yaml  streamlit-deployment.yaml
lhas/: .env.example  docker-compose.yml  pyproject.toml
reports/: metrics_report.md
scripts/: add_categories.py  build_faiss.py  clean_and_merge_datasets.py  cleanup_and_reseed.py  debug_reranker.py  download_and_clean_datasets.py  download_kaggle_dataset.py  download_large_datasets.py  (+26 more)
(+53 files in other folders)
