[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumafin"
version = "0.1.0"
description = "AI-powered transaction categorization with adaptive personalization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML/AI packages
    "numpy>=1.24.0,<2.0.0",  # Install numpy first from wheels
    "scipy>=1.10.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.9.0",
    "hdbscan>=0.8.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "shap>=0.42.0",
    
    # Web framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    
    # Database
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "sqlalchemy>=2.0.0",
    
    # Task queue
    "celery>=5.3.0",
    "redis>=5.0.0",
    
    # Data validation & settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Data processing
    "pandas>=2.0.0",
    
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    
    # UI & Visualization
    "streamlit>=1.28.0",
    "plotly>=5.0.0",
    
    # Utilities
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "ruff==0.1.6",
    "mypy==1.7.1",
]